# MovieMe

./: .gitignore  CMakeLists.txt  IMDBtop1000.csv  README.md  byActor.cpp  byActor.hpp  byGenre.cpp  byGenre.hpp  byRating.cpp  byRating.hpp  csvName.hpp  main.cpp  movie.hpp  movieList.hpp  outputter.cpp  outputter.hpp  questionnaire.cpp  questionnaire.hpp  romanceInput.txt  sortLists.hpp  test.cpp  test.csv
.github/workflows/: main.yml
